apps/second-star/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-star-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: second-star-api
  template:
    metadata:
      labels:
        app: second-star-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: dentrodoarmario
      containers:
        - name: api
          image: local/second-star-merlin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
