apps/second-star/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-star-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: second-star-db
  template:
    metadata:
      labels:
        app: second-star-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: dentrodoarmario
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -h localhost -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\""]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "1Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: second-star-postgres-pvc
