apps/second-star/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    app: second-star-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
