apps/second-star/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: second-star-web
spec:
  type: ClusterIP
  selector:
    app: second-star-web
  ports:
    - port: 8088
      targetPort: 80
      protocol: TCP
  externalIPs:
    - 192.168.1.101
